--- a/main.css
+++ b/main.css
@@ -1,1 +1,11 @@
-*
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    padding: 16px,0;
+    background-color: #182C61;
+    color: #ecf0f1;
+}
